Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,6 +1,7 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
 l10n/po/ja_JP/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc.po, 0, 28, 0, 464 ,100%
 l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po, 0, 26, 0, 698 ,100%
+l10n/po/ja_JP/_posts/2021-09-18-quarkus-newsletter-13.adoc.po, 0, 6, 0, 183 ,100%
 l10n/po/ja_JP/_posts/2021-09-16-quarkus-2-2-3-final-released.adoc.po, 0, 14, 0, 156 ,100%
 l10n/po/ja_JP/_posts/2021-09-15-adoptium-customer-story.adoc.po, 0, 37, 0, 1196 ,100%
 l10n/po/ja_JP/_posts/2021-09-14-quarkus-newsletter-12.adoc.po, 0, 6, 0, 155 ,100%
