Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-15 02:18+0000\n"
+"POT-Creation-Date: 2021-10-22 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,7 +58,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:18
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:38
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:84
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:140
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:121
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:149
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:167
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:449
@@ -100,7 +100,7 @@ msgstr "boolean"
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:21
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:41
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:87
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:143
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:124
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:152
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:170
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:452
@@ -314,31 +314,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:92
-#, no-wrap
-msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.grant.type]]`link:#quarkus-oidc_quarkus.keycloak.devservices.grant.type[quarkus.keycloak.devservices.grant.type]`\n"
-"\n"
-"[.description]\n"
-"--\n"
-"Grant type which will be used to acquire a token to test the OIDC 'service' applications\n"
-"--"
-msgstr ""
-
-#. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:93
-#, no-wrap
-msgid "`client`, `password`, `code`, `implicit`"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:96
-#, no-wrap
-msgid "`code`"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:102
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.port]]`link:#quarkus-oidc_quarkus.keycloak.devservices.port[quarkus.keycloak.devservices.port]`\n"
@@ -351,7 +327,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:103
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:94
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:204
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:223
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:358
@@ -368,19 +344,82 @@ msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:111
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:102
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.web-clien-timeout]]`link:#quarkus-oidc_quarkus.keycloak.devservices.web-clien-timeout[quarkus.keycloak.devservices.web-clien-timeout]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.users-users]]`link:#quarkus-oidc_quarkus.keycloak.devservices.users-users[quarkus.keycloak.devservices.users]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The WebClient timeout. Use this property to configure how long an HTTP client will wait for a response when requesting tokens from Keycloak and sending them to the service endpoint.\n"
+"The Keycloak users map containing the user name and password pairs. If this map is empty then two users, 'alice' and 'bob' with the passwords matching their names will be created. This property will be used to create the Keycloak users if the realm file pointed to by the 'realm-path' property does not exist.\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:113
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:103
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:112
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:859
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:1436
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:111
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.roles-roles]]`link:#quarkus-oidc_quarkus.keycloak.devservices.roles-roles[quarkus.keycloak.devservices.roles]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The Keycloak user roles. If this map is empty then a user named 'alice' will get 'admin' and 'user' roles and all other users will get a 'user' role. This property will be used to create the Keycloak roles if the realm file pointed to by the 'realm-path' property does not exist.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:120
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.oidc.enabled]]`link:#quarkus-oidc_quarkus.oidc.enabled[quarkus.oidc.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If the OIDC extension is enabled.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:129
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.oidc.devui.grant.type]]`link:#quarkus-oidc_quarkus.oidc.devui.grant.type[quarkus.oidc.devui.grant.type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Grant type which will be used to acquire a token to test the OIDC 'service' applications\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:130
+#, no-wrap
+msgid "`client`, `password`, `code`, `implicit`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:138
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.oidc.devui.web-clien-timeout]]`link:#quarkus-oidc_quarkus.oidc.devui.web-clien-timeout[quarkus.oidc.devui.web-clien-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The WebClient timeout. Use this property to configure how long an HTTP client used by Dev UI handlers will wait for a response when requesting tokens from OpenId Connect Provider and sending them to the service endpoint.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc.adoc:140
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:195
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:214
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:603
@@ -397,57 +436,6 @@ msgstr ""
 msgid ""
 "link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
 "  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:116
-#, no-wrap
-msgid "`4S`"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:121
-#, no-wrap
-msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.users-users]]`link:#quarkus-oidc_quarkus.keycloak.devservices.users-users[quarkus.keycloak.devservices.users]`\n"
-"\n"
-"[.description]\n"
-"--\n"
-"The Keycloak users map containing the user name and password pairs. If this map is empty then two users, 'alice' and 'bob' with the passwords matching their names will be created. This property will be used to create the Keycloak users if the realm file pointed to by the 'realm-path' property does not exist.\n"
-"--"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:122
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:131
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:859
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:1436
-#, no-wrap
-msgid "`Map<String,String>`"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:130
-#, no-wrap
-msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.keycloak.devservices.roles-roles]]`link:#quarkus-oidc_quarkus.keycloak.devservices.roles-roles[quarkus.keycloak.devservices.roles]`\n"
-"\n"
-"[.description]\n"
-"--\n"
-"The Keycloak user roles. If this map is empty then a user named 'alice' will get 'admin' and 'user' roles and all other users will get a 'user' role. This property will be used to create the Keycloak roles if the realm file pointed to by the 'realm-path' property does not exist.\n"
-"--"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc.adoc:139
-#, no-wrap
-msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-oidc_quarkus.oidc.enabled]]`link:#quarkus-oidc_quarkus.oidc.enabled[quarkus.oidc.enabled]`\n"
-"\n"
-"[.description]\n"
-"--\n"
-"If the OIDC extension is enabled.\n"
-"--"
 msgstr ""
 
 #. type: Table
