--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-30 02:23+0000\n"
+"POT-Creation-Date: 2021-10-22 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,14 +53,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:17
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:26
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:45
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:20
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:28
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:47
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -69,10 +69,64 @@ msgstr "`true`"
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:25
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type[quarkus.oidc.devui.grant.type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Grant type which will be used to acquire a token to test the OIDC 'service' applications\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:26
+#, no-wrap
+msgid "`client`, `password`, `code`, `implicit`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:34
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-clien-timeout]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-clien-timeout[quarkus.oidc.devui.web-clien-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The WebClient timeout. Use this property to configure how long an HTTP client used by Dev UI handlers will wait for a response when requesting tokens from OpenId Connect Provider and sending them to the service endpoint.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:36
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:44
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled[quarkus.oidc.default-token-cache-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
 "Enable the registration of the Default TokenIntrospection and UserInfo Cache implementation bean. Note it only allows to use the default implementation, one needs to configure it in order to activate it, please see `OidcConfig++#++tokenCache`.\n"
 "--"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:51
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:55
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-build-time-config.adoc:59
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
