Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.8.0 released!'\n"
@@ -34,32 +34,43 @@ msgid ""
 "author: jeffmaury\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus Tools for IntelliJ 1.8.0 released!\n"
+"date: 2021-10-25\n"
+"tags: announcement ide\n"
+"synopsis: 「このリリースでは、CodeLens for RESTエンドポイントのサポートが追加され、MicroProfile Fault ToleranceとMetricsのサポートが強化されています。\n"
+"author: jeffmaury\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:13
+#, fuzzy
 msgid "We are very pleased to announce the 1.8.0 release of Quarkus Tools for IntelliJ.  This release adds support for CodeLens for REST endpoints and enhances MicroProfile Fault Tolerance and Metrics supports."
-msgstr ""
+msgstr "Quarkus Tools for IntelliJの1.8.0リリースを発表できることを嬉しく思います。このリリースでは、CodeLens for RESTエンドポイントのサポートが追加され、MicroProfile Fault ToleranceとMetricsのサポートが強化されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:14
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Codelens"
-msgstr ""
+msgstr "コーデランス"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:17
+#, fuzzy
 msgid "When editing a resource class while the current Quarkus application is running in development mode (`./mvnw compile quarkus:dev` or `./gradlew quarkusDev`), there are now CodeLenses that provide the URL for the REST endpoints."
-msgstr ""
+msgstr "現在のQuarkusアプリケーションが開発モード( `./mvnw compile quarkus:dev` または `./gradlew quarkusDev`)で実行されているときにリソースクラスを編集すると、RESTエンドポイントのURLを提供するコードレンズが登場しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:19
+#, fuzzy
 msgid "This feature takes into account the path name and the HTTP server port from your application.properties file in order to create the URL."
-msgstr ""
+msgstr "この機能では、アプリケーション.propertiesファイルのパス名とHTTPサーバーのポートを考慮して、URLを作成します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:21
+#, fuzzy
 msgid "Clicking on the CodeLens URL will open the URL in your default browser."
-msgstr ""
+msgstr "CodeLensのURLをクリックすると、デフォルトのブラウザでURLが表示されます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:22
@@ -69,14 +80,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Microprofile Fault Tolerance"
-msgstr ""
+msgstr "マイクロプロファイル・フォールト・トレランス"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:27
+#, fuzzy
 msgid "Methods referenced in `@Fallback(fallbackMethod)` are validated:"
-msgstr ""
+msgstr "`@Fallback(fallbackMethod)` で参照されている方法は検証されています。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:28
@@ -86,8 +98,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:31
+#, fuzzy
 msgid "Activating code completion on the `@Fallback(fallbackMethod)` value will get the list of available methods being proposed:"
-msgstr ""
+msgstr "`@Fallback(fallbackMethod)` の値でコード補完を有効にすると、提案されている利用可能な方法のリストが表示されます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:32
@@ -97,14 +110,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "MicroProfile Metrics"
-msgstr ""
+msgstr "マイクロプロファイル・メトリクス"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:37
+#, fuzzy
 msgid "Invalid use of the `@Gauge` annotation is now reported:"
-msgstr ""
+msgstr "`@Gauge` アノテーションの無効な使用が報告されるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:38
@@ -114,32 +128,36 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:40
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Moving Forward"
-msgstr ""
+msgstr "前進"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:44
+#, fuzzy
 msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr ""
+msgstr "ご質問、ご提案、ご意見などがございましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[問題]提起してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:46
+#, fuzzy
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr ""
+msgstr "次のリリースをお楽しみに"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:50
+#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr ""
+msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc:50
+#, fuzzy
 msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr ""
+msgstr "課題を開く https://github.com/redhat-developer/intellij-quarkus/issues"
