Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/amqp-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amqp-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-10-26 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -122,7 +122,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/amqp-reference.adoc:66
 #, no-wrap
-msgid "mp.messaging.incoming.prices.connector=smallrye-amqp #5\n"
+msgid "mp.messaging.incoming.prices.connector=smallrye-amqp # <5>\n"
 msgstr ""
 
 #. type: Plain text
